--- a/app/src/main/res/layout/item_list_file.xml
+++ b/app/src/main/res/layout/item_list_file.xml
@@ -29,7 +29,7 @@
         <ImageView
             android:id="@+id/itemListFile_icon"
             android:layout_alignParentLeft="true"
-            android:src="@{meta.meta.thumbImageUrl??meta.thumbImageUrl}"
+            android:src="@{meta.thumbImageUrl}"
             android:padding="1dp"
             android:layout_margin="1dp"
             android:layout_width="@dimen/listItemNormal"
@@ -45,7 +45,7 @@
                 android:layout_width="match_parent"
                 android:textSize="@dimen/textTitle"
                 android:singleLine="true"
-                android:text="@{meta.title??meta.name}"
+                android:text="@{meta.meta.title??meta.name}"
                 android:textColor="@color/textTitle"
                 android:layout_height="wrap_content"/>
             <LinearLayout
