--- a/app/src/main/res/layout/item_playing_media.xml
+++ b/app/src/main/res/layout/item_playing_media.xml
@@ -3,7 +3,7 @@
     <data>
         <variable
             name="media"
-            type="com.merlin.bean.Music" />
+            type="com.merlin.bean.Media" />
         <variable
             name="position"
             type="int" />
