--- a/app/src/main/res/layout/status_icon.xml
+++ b/app/src/main/res/layout/status_icon.xml
@@ -4,7 +4,7 @@
     <data>
     </data>
     <ImageView
-        binding:enableModelClick="@{true}"
+        binding:enableClick="@{true}"
         android:layout_width="30dp"
         android:layout_height="30dp"/>
 </layout>
