--- a/app/src/main/res/layout/status_text.xml
+++ b/app/src/main/res/layout/status_text.xml
@@ -5,6 +5,6 @@
 
     </data>
     <TextView
-        binding:enableModelClick="@{true}"
+        binding:enableClick="@{true}"
         style="@style/titleNormalTextView"/>
 </layout>
