--- a/app/src/main/res/layout/media_display_all_medias.xml
+++ b/app/src/main/res/layout/media_display_all_medias.xml
@@ -21,6 +21,7 @@
                 style="@style/editTextNormal"/>
         </RelativeLayout>
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:layout_marginTop="3dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <androidx.recyclerview.widget.RecyclerView
