--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -41,7 +41,7 @@
          <item name="android:focusable">true</item>
          <item name="android:focusableInTouchMode">true</item>
          <item name="android:minHeight">43dp</item>
-         <item name="android:background">#3000</item>
+         <item name="android:background">@drawable/round_corner_gray</item>
     </style>
 
     <style name="checkboxStyle" parent="@android:style/Widget.CompoundButton.CheckBox">
