Add media stream play

--- a/app/src/main/res/layout/item_media_sheet.xml
+++ b/app/src/main/res/layout/item_media_sheet.xml
@@ -9,9 +9,10 @@
     <import type="com.merlin.view.Clicker"/>
 </data>
     <LinearLayout
-        binding:enableClick="@{Clicker.click(sheet,true)}"
+        binding:enableClick="@{Clicker.multiClick(sheet,true)}"
         android:layout_marginLeft="3dp"
         android:layout_marginRight="3dp"
+        android:layout_marginBottom="3dp"
         android:orientation="vertical"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
