--- a/app/src/main/res/layout/activity_media_play.xml
+++ b/app/src/main/res/layout/activity_media_play.xml
@@ -9,13 +9,15 @@
       <import type="com.merlin.binding.StatusBar"/>
   </data>
   <RelativeLayout
-      binding:createModel="@{null}"
-      binding:enableBarPadding="@{0}"
-      binding:statusBar="@{StatusBar.statusBar(StatusBar.ICON_BACK,null,null)}"
+      binding:createModel="@{true}"
       android:background="@drawable/background"
       android:layout_width="match_parent"
       android:layout_height="match_parent">
-
+      <TextView
+          android:text="测试"
+          android:layout_width="wrap_content"
+          android:background="#f00"
+          android:layout_height="wrap_content"/>
       <androidx.recyclerview.widget.RecyclerView
           binding:adapter="@{tvm3.displayAdapter}"
           android:layout_width="match_parent"
