--- a/app/src/main/res/layout/media_display_play.xml
+++ b/app/src/main/res/layout/media_display_play.xml
@@ -7,9 +7,11 @@
             type="com.merlin.model.MediaPlayModel" />
         <import type="com.merlin.player.Status"/>
         <import type="com.merlin.player.Time"/>
+        <import type="com.merlin.binding.StatusBar"/>
     </data>
     <RelativeLayout
         android:id="@+id/media_display_play_rootRL"
+        binding:statusBar="@{StatusBar.statusBar(`你好`)}"
         binding:createModel="@{true}"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
