--- a/app/src/main/res/layout/dlg_layout.xml
+++ b/app/src/main/res/layout/dlg_layout.xml
@@ -21,9 +21,12 @@
             <TextView
                 android:id="@+id/dlg_titleTV"
                 android:visibility="gone"
+                android:textStyle="bold"
                 style="@style/titleNormalTextView"/>
             <FrameLayout
                 android:id="@+id/dlg_contentFL"
+                android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
 
