--- a/app/src/main/res/layout/media_display_all_medias.xml
+++ b/app/src/main/res/layout/media_display_all_medias.xml
@@ -25,6 +25,7 @@
                 style="@style/editTextNormal"/>
         </RelativeLayout>
         <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+            android:paddingTop="10dp"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
             <androidx.recyclerview.widget.RecyclerView
