--- a/app/src/main/res/layout/media_display_play.xml
+++ b/app/src/main/res/layout/media_display_play.xml
@@ -9,6 +9,7 @@
         <import type="com.merlin.player.Time"/>
         <import type="com.merlin.binding.StatusBar"/>
         <import type="com.merlin.client.R"/>
+        <import type="android.view.View"/>
     </data>
     <RelativeLayout
         android:id="@+id/media_display_play_rootRL"
@@ -38,6 +39,7 @@
                         android:textColor="@color/textTitle"
                         android:layout_alignParentLeft="true"
                         android:layout_centerVertical="true"
+                        android:text="@{Time.formatTime(vm.model.curerntPosition??0)}"
                         android:textSize="@dimen/textSmall"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"/>
@@ -76,39 +78,37 @@
                     android:orientation="horizontal">
 
                     <ImageView
-                        android:id="@+id/activityMediaPlay_playModeIV"
-                        binding:enableMultiClick="@{true}"
-                        android:src="@drawable/single_normal"
+                        binding:enableClick="@{true}"
+                        android:src="@{R.drawable.single_normal}"
                         android:layout_margin="8dp"
                         android:layout_width="@dimen/iconSizeSmall"
                         android:layout_height="@dimen/iconSizeSmall"/>
 
                     <ImageView
-                        android:id="@+id/activityMediaPlay_preIV"
-                        binding:enableMultiClick="@{true}"
-                        android:src="@drawable/selector_pre"
+                        binding:enableClick="@{true}"
+                        android:src="@{R.drawable.selector_pre}"
                         android:layout_margin="8dp"
                         android:layout_width="@dimen/iconSizeMedium"
                         android:layout_height="@dimen/iconSizeMedium"/>
 
                     <ImageView
-                        android:id="@+id/activityMediaPlay_playPauseIV"
-                        android:src="@{vm.model.status==Status.STATUS_PLAYING||vm.model.status==Status.STATUS_PROGRESS?@drawable/selector_media_pause:@drawable/selector_media_play}"
-                        binding:enableMultiClick="@{true}"
+                        android:src="@{vm.model.status==Status.STATUS_PLAYING||vm.model.status==Status.STATUS_PROGRESS?R.drawable.selector_media_pause:R.drawable.selector_media_play}"
+                        binding:enableClick="@{true}"
                         android:layout_margin="8dp"
                         android:layout_width="@dimen/iconSizeLarge"
                         android:layout_height="@dimen/iconSizeLarge"/>
 
                     <ImageView
-                        android:id="@+id/activityMediaPlay_nextIV"
-                        android:src="@drawable/selector_next"
+                        binding:enableClick="@{true}"
+                        android:src="@{R.drawable.selector_next}"
                         binding:enableMultiClick="@{true}"
                         android:layout_margin="8dp"
                         android:layout_width="@dimen/iconSizeMedium"
                         android:layout_height="@dimen/iconSizeMedium"/>
 
                     <ImageView
-                        android:src="@drawable/selector_menu"
+                        binding:enableClick="@{true}"
+                        android:src="@{R.drawable.selector_menu}"
                         android:layout_margin="8dp"
                         android:layout_width="@dimen/iconSizeSmall"
                         android:layout_height="@dimen/iconSizeSmall"/>
@@ -133,12 +133,16 @@
                     android:layout_centerHorizontal="true"
                     android:layout_height="wrap_content">
                     <ImageView
-                        android:src="@drawable/heart_normal"
+                        binding:enableClick="@{true}"
+                        android:visibility="@{vm.model.playing==null?View.INVISIBLE:View.VISIBLE}"
+                        android:src="@{vm.model.playing.favorite?R.drawable.heart_pressed:R.drawable.heart_normal}"
+                        android:selected="@{vm.model.playing.favorite}"
                         android:layout_margin="10dp"
                         android:layout_width="@dimen/iconSizeLittle"
                         android:layout_height="@dimen/iconSizeLittle"/>
                     <ImageView
-                        android:src="@drawable/download_media_normal"
+                        binding:enableClick="@{true}"
+                        android:src="@{R.drawable.selector_download_media}"
                         android:layout_margin="10dp"
                         android:layout_width="@dimen/iconSizeLittle"
                         android:layout_height="@dimen/iconSizeLittle"/>
