--- a/app/src/main/res/layout/media_sheet_choose.xml
+++ b/app/src/main/res/layout/media_sheet_choose.xml
@@ -4,7 +4,7 @@
     <data>
         <variable
             name="media"
-            type="com.merlin.bean.Media" />
+            type="com.merlin.bean.NasMedia" />
         <variable
             name="vm"
             type="com.merlin.model.MediaSheetChooseListModel" />
