--- a/app/src/main/res/layout/media_display_play.xml
+++ b/app/src/main/res/layout/media_display_play.xml
@@ -120,18 +120,23 @@
                 android:layout_height="match_parent">
                 <LinearLayout
                     android:orientation="vertical"
-                    android:layout_width="match_parent"
+                    android:layout_centerHorizontal="true"
+                    android:gravity="center"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content">
                     <TextView
-                        android:text="@{vm.model.sampleRate}"
+                        android:text="@{vm.model.playingArtistAlbum}"
                         style="@style/titleSubNormalTextView" />
+                    <TextView
+                        android:text="@{vm.model.playingMeta}"
+                        style="@style/titleSmallTextView" />
                 </LinearLayout>
                 <ImageView
                     android:layout_centerHorizontal="true"
                     android:layout_centerVertical="true"
                     android:src="@{vm.model.albumImage}"
-                    android:alpha="0.3"
-                    android:layout_marginBottom="20dp"
+                    android:alpha="0.9"
+                    android:layout_marginBottom="30dp"
                     android:layout_width="150dp"
                     android:layout_height="150dp"/>
                 <LinearLayout
