--- a/app/src/main/res/layout/media_display_all_medias.xml
+++ b/app/src/main/res/layout/media_display_all_medias.xml
@@ -12,7 +12,7 @@
         binding:createModel="@{true}"
         android:paddingLeft="@dimen/contentGap"
         android:paddingRight="@dimen/contentGap"
-        binding:statusBar="@{StatusBar.statusBar(null, R.string.allMedias,R.string.playAll)}"
+        binding:statusBar="@{StatusBar.statusBar(null, R.string.allMedias,R.drawable.selector_menu)}"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
