--- a/app/src/main/res/layout/file_detail.xml
+++ b/app/src/main/res/layout/file_detail.xml
@@ -25,8 +25,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <ImageView
-                android:src="@{file.thumbImageUrl}"
-                android:visibility="@{(null==file.thumbImageUrl)?View.GONE:View.VISIBLE}"
+                android:src="@{file.imageUrl}"
+                android:visibility="@{(null==file.imageUrl)?View.GONE:View.VISIBLE}"
                 android:layout_gravity="center_horizontal"
                 android:layout_width="50dp"
                 android:layout_height="50dp"/>
